force-app/main/default/objects/Spiff_Claim_Payment__c/Spiff_Claim_Payment__c.object-meta.xml
<CustomObject>
    <label>Spiff Claim Payment</label>
    <nameField>
        <label>Spiff Claim Payment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spiff Claim Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>