force-app/main/default/objects/Spiff_Claim_Payment__c/fields/address1__c.field-meta.xml
<CustomField>
    <fullName>address1__c</fullName>
    <formula>if(not(isblank(Contact__r.MailingStreet)), Contact__r.MailingStreet,Contact__r.Account.BillingStreet)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>address1</label>
    <type>Text</type>
</CustomField>