force-app/main/default/objects/Spiff_Claim_Payment__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>if(not(isblank(Contact__r.MailingCity)), Contact__r.MailingCity,Contact__r.Account.BillingCity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>