force-app/main/default/objects/Spiff_Claim_Payment__c/fields/claimerName__c.field-meta.xml
<CustomField>
    <fullName>claimerName__c</fullName>
    <formula>if(not(isblank(Contact__r.Legal_First_Name__c)),Contact__r.Legal_First_Name__c,Contact__r.FirstName )
+ &apos; &apos;+
if(not(isblank(Contact__r.Legal_Last_Name__c)),Contact__r.Legal_Last_Name__c,Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>claimerName</label>
    <type>Text</type>
</CustomField>