force-app/main/default/objects/Spiff_Claim_Payment__c/fields/claimId__c.field-meta.xml
<CustomField>
    <fullName>claimId__c</fullName>
    <formula>CASESAFEID(Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>claimId</label>
    <type>Text</type>
</CustomField>