force-app/main/default/objects/Spiff_Claim_Payment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Spiff Claim Payments</relationshipLabel>
    <relationshipName>Spiff_Claim_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>