force-app/main/default/objects/Spiff_Claim_Payment__c/fields/contactPhone__c.field-meta.xml
<CustomField>
    <fullName>contactPhone__c</fullName>
    <formula>if(not(isblank(Contact__r.Phone)), Contact__r.Phone,Contact__r.Account.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contactPhone</label>
    <type>Text</type>
</CustomField>