force-app/main/default/objects/Spiff_Claim_Payment__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>if(not(isblank(Contact__r.MailingCountry)), Contact__r.MailingCountry,Contact__r.Account.BillingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>