force-app/main/default/objects/Spiff_Claim_Payment__c/fields/createdBy__c.field-meta.xml
<CustomField>
    <fullName>createdBy__c</fullName>
    <formula>Contact__r.FirstName+ &apos; &apos;+ Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>createdBy</label>
    <type>Text</type>
</CustomField>