force-app/main/default/objects/Spiff_Claim_Payment__c/fields/createdByUserName__c.field-meta.xml
<CustomField>
    <fullName>createdByUserName__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>createdByUserName</label>
    <type>Text</type>
</CustomField>