force-app/main/default/objects/Spiff_Claim_Payment__c/fields/creationDate__c.field-meta.xml
<CustomField>
    <fullName>creationDate__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>creationDate</label>
    <type>Text</type>
</CustomField>