force-app/main/default/objects/Spiff_Claim_Payment__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>if(Country__c == &apos;Canada&apos;,&apos;CAN&apos;,&apos;USD&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>