force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finaddress2__c.field-meta.xml
<CustomField>
    <fullName>finaddress2__c</fullName>
    <label>address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>