force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finaddress3__c.field-meta.xml
<CustomField>
    <fullName>finaddress3__c</fullName>
    <label>address3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>