force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finaddress4__c.field-meta.xml
<CustomField>
    <fullName>finaddress4__c</fullName>
    <label>address4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>