force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finattribute1__c.field-meta.xml
<CustomField>
    <fullName>finattribute1__c</fullName>
    <label>attribute1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>