force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finattribute2__c.field-meta.xml
<CustomField>
    <fullName>finattribute2__c</fullName>
    <label>attribute2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>