force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finattribute3__c.field-meta.xml
<CustomField>
    <fullName>finattribute3__c</fullName>
    <label>attribute3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>