force-app/main/default/objects/Spiff_Claim_Payment__c/fields/Finch_Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Finch_Account_Alias__c</fullName>
    <label>Finch_Account_Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>