force-app/main/default/objects/Spiff_Claim_Payment__c/fields/Finch_Club_Status__c.field-meta.xml
<CustomField>
    <fullName>Finch_Club_Status__c</fullName>
    <label>Finch_Club_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>