force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finchClubDate__c.field-meta.xml
<CustomField>
    <fullName>finchClubDate__c</fullName>
    <label>finchClubDate</label>
    <type>Date</type>
</CustomField>