force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finchClubLegacyId__c.field-meta.xml
<CustomField>
    <fullName>finchClubLegacyId__c</fullName>
    <label>finchClubLegacyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>