force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finclaimerFname__c.field-meta.xml
<CustomField>
    <fullName>finclaimerFname__c</fullName>
    <label>claimerFname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>