force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finclaimerLname__c.field-meta.xml
<CustomField>
    <fullName>finclaimerLname__c</fullName>
    <label>claimerLname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>