force-app/main/default/objects/Spiff_Claim_Payment__c/fields/fincontactEmail__c.field-meta.xml
<CustomField>
    <fullName>fincontactEmail__c</fullName>
    <externalId>true</externalId>
    <label>contactEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>