force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finlastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>finlastUpdateDate__c</fullName>
    <label>lastUpdateDate</label>
    <type>Date</type>
</CustomField>