force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finofferAmount__c.field-meta.xml
<CustomField>
    <fullName>finofferAmount__c</fullName>
    <label>offerAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>