force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finofferNumber__c.field-meta.xml
<CustomField>
    <fullName>finofferNumber__c</fullName>
    <label>offerNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>