force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finpaymentCashDate__c.field-meta.xml
<CustomField>
    <fullName>finpaymentCashDate__c</fullName>
    <label>paymentCashDate</label>
    <type>Date</type>
</CustomField>