force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finpaymentIssueDate__c.field-meta.xml
<CustomField>
    <fullName>finpaymentIssueDate__c</fullName>
    <label>paymentIssueDate</label>
    <type>Date</type>
</CustomField>