force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finpaymentNumber__c.field-meta.xml
<CustomField>
    <fullName>finpaymentNumber__c</fullName>
    <label>paymentNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>