force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finpostmarkDate__c.field-meta.xml
<CustomField>
    <fullName>finpostmarkDate__c</fullName>
    <label>postmarkDate</label>
    <type>Date</type>
</CustomField>