force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finprocessStatus__c.field-meta.xml
<CustomField>
    <fullName>finprocessStatus__c</fullName>
    <defaultValue>&apos;Approved&apos;</defaultValue>
    <label>processStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>