force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finpurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>finpurchaseDate__c</fullName>
    <label>purchaseDate</label>
    <type>Date</type>
</CustomField>