force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finpurchaseFrom__c.field-meta.xml
<CustomField>
    <fullName>finpurchaseFrom__c</fullName>
    <label>purchaseFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>