force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finserialNumber__c.field-meta.xml
<CustomField>
    <fullName>finserialNumber__c</fullName>
    <label>serialNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>