force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finupcCode__c.field-meta.xml
<CustomField>
    <fullName>finupcCode__c</fullName>
    <label>upcCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>