force-app/main/default/objects/Spiff_Claim_Payment__c/fields/finvsSku__c.field-meta.xml
<CustomField>
    <fullName>finvsSku__c</fullName>
    <label>vsSku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>