force-app/main/default/objects/Spiff_Claim_Payment__c/fields/Individual_or_Company__c.field-meta.xml
<CustomField>
    <fullName>Individual_or_Company__c</fullName>
    <formula>Contact__r.Spiff_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual or Company</label>
    <type>Text</type>
</CustomField>