force-app/main/default/objects/Spiff_Claim_Payment__c/fields/Payment_Ref__c.field-meta.xml
<CustomField>
    <fullName>Payment_Ref__c</fullName>
    <formula>if(not(isblank( finofferNumber__c)),text(finofferNumber__c),pmtRefAutoNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Ref #</label>
    <type>Text</type>
</CustomField>