force-app/main/default/objects/Spiff_Claim_Payment__c/fields/payment_type__c.field-meta.xml
<CustomField>
    <fullName>payment_type__c</fullName>
    <formula>text(Contact__r.Portal_Spiff_Payment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>payment type</label>
    <type>Text</type>
</CustomField>