force-app/main/default/objects/Spiff_Claim_Payment__c/fields/PayPal_LastName__c.field-meta.xml
<CustomField>
    <fullName>PayPal_LastName__c</fullName>
    <label>PayPal_LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>