force-app/main/default/objects/Spiff_Claim_Payment__c/fields/paypalCustId__c.field-meta.xml
<CustomField>
    <fullName>paypalCustId__c</fullName>
    <label>paypalCustId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>