force-app/main/default/objects/Spiff_Claim_Payment__c/fields/pmtRefAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>pmtRefAutoNumber__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>offerNumber</label>
    <type>AutoNumber</type>
</CustomField>