force-app/main/default/objects/Spiff_Claim_Payment__c/fields/pmtType__c.field-meta.xml
<CustomField>
    <fullName>pmtType__c</fullName>
    <label>pmtType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>