force-app/main/default/objects/Spiff_Claim_Payment__c/fields/Portal_Spiff_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Spiff_Payment_Type__c</fullName>
    <label>Portal_Spiff_Payment_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>