force-app/main/default/objects/Spiff_Claim_Payment__c/fields/portalSpiffPayPalEmail__c.field-meta.xml
<CustomField>
    <fullName>portalSpiffPayPalEmail__c</fullName>
    <formula>Contact__r.portalSpiffPayPalEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>portalSpiffPayPalEmail</label>
    <type>Text</type>
</CustomField>