force-app/main/default/objects/Spiff_Claim_Payment__c/fields/postalCode__c.field-meta.xml
<CustomField>
    <fullName>postalCode__c</fullName>
    <formula>if(not(isblank(Contact__r.MailingPostalCode)), Contact__r.MailingPostalCode,Contact__r.Account.BillingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>postalCode</label>
    <type>Text</type>
</CustomField>