force-app/main/default/objects/Spiff_Claim_Payment__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>CASE(Product_Line__c, &apos;IFP&apos;,&apos;P089&apos;,&apos;CD&apos;,&apos;P048&apos;,&apos;LCD&apos;,&apos;P024&apos;,&apos;PJ&apos;, &apos;P004&apos;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>