force-app/main/default/objects/Spiff_Claim_Payment__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>if(not(isblank(Contact__r.MailingState)), Contact__r.MailingState,Contact__r.Account.BillingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>