force-app/main/default/objects/Spiff_Claim_Payment__c/fields/Validated_Unpaid_Spiff_US_100__c.field-meta.xml
<CustomField>
    <fullName>Validated_Unpaid_Spiff_US_100__c</fullName>
    <formula>finofferAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validated Unpaid Spiff (&gt; US$100)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>