force-app/main/default/objects/Spiff_Claim_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PaymentStatus__c</columns>
    <columns>finaddress2__c</columns>
    <columns>finaddress3__c</columns>
    <columns>finaddress4__c</columns>
    <columns>finattribute1__c</columns>
    <columns>finattribute2__c</columns>
    <columns>finattribute3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>